files/zta-homelab/labs/02-secured-comms/01-peer-authn-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system        # mesh-wide when applied to the root namespace
spec:
  mtls:
    mode: STRICT
